AoC 2023 Day11 Completed!